--- a/index.html
+++ b/index.html
@@ -38,14 +38,26 @@
 <body>
     <div id="root">
 
+        <h1>Add a task:</h1>
+        <input id="input" type="text" v-model="newTask">
+
+        <button :disabled='tasks.length >10' @click="addTask">Click me</button>
+
+        <h2>Incomplete Tasks</h2>
         <ul>
-            <li v-for="name in names" v-text="name"></li>
+            <li v-for="task in incompleteTasks">
+                {{task.description}}
+                <button @click="doneTask(task)">Done</button>
+            </li>
         </ul>
 
-        <input id="input" type="text" v-model="newName">
-
-        <button :disabled='names.length >10' @click="addName">Click me</button>
-    
+        <h2>Complete Tasks</h2>
+        <ul>
+            <li v-for="task in completeTasks">
+                    {{task.description}}
+                    <button @click="undoneTask(task)">Not Done</button>
+            </li>
+        </ul>
     </div>
 
     <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
@@ -56,27 +68,48 @@
             el: '#root',
 
             data: {
-                newName: '',
+                newTask: '',
                 isDisabled: false,
-                names: ['hello', 'hiya', 'hello there']
-
+                tasks: [
+                    {description: 'Go to the store', completed: true},
+                    {description: 'Make donation', completed: false},
+                    {description: 'Clear inbox', completed: true},
+                    {description: 'Make Dinner', completed: true},
+                    {description: 'Clean Room', completed: false}
+                ]
             },
 
             methods: {
 
-                addName() {
-                    this.names.push(this.newName)
-                    this.newName= '';
-                    /*if (this.names.length > 10 ) {
-                        this.disableMe();
-                    }*/
+                addTask() {
+                    this.tasks.push({description: this.newTask, completed: false})
+                    this.newTask= '';
                 },
 
                 disableMe() {
                     this.isDisabled = true;
+                },
+
+                doneTask(task) {
+                    task.completed = true;
+                },
+                undoneTask(task) {
+                    task.completed = false;
                 }
 
             },
+
+            computed: {
+
+                incompleteTasks() {
+
+                    return this.tasks.filter(task => ! task.completed);
+                },
+                completeTasks() {
+
+                    return this.tasks.filter(task => task.completed);
+                }
+            }
         });
 
     </script>
