accidentally gave 2 divs same id

--- a/8-Build_generic_interface/index.html
+++ b/8-Build_generic_interface/index.html
@@ -13,7 +13,7 @@
     <body>
         <div id='root'>
             <navigation-area></navigation-area>
-            <div id="root">
+            <div>
                 <main-image-hero></main-image-hero>
                 <results-area></results-area>
             </div>   
